--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.main-container {
+  max-width: 800px;
+}
+
 .header {
   text-align: center;
+  color: white;
+  background-color: #3f8e7c
+}
+
+.output {
+  background-color: lightyellow;
+}
+
+.border-container {
+  outline: goldenrod solid 1px;
 }
